@@ -268,8 +268,9 @@ public class BomPlugin implements Plugin<Project> {
 
 		private Node findChild(Node parent, String name) {
 			for (Object child : parent.children()) {
-				if (child instanceof Node node) {
-					if ((node.name() instanceof QName qname) && name.equals(qname.getLocalPart())) {
+				if (child instanceof Node) {
+					Node node = (Node) child;
+					if ((node.name() instanceof QName) && name.equals(((QName) node.name()).getLocalPart())) {
 						return node;
 					}
 					if (name.equals(node.name())) {
@@ -282,12 +283,17 @@ public class BomPlugin implements Plugin<Project> {
 
 		@SuppressWarnings("unchecked")
 		private List<Node> findChildren(Node parent, String name) {
-			return parent.children().stream().filter((child) -> isNodeWithName(child, name)).toList();
+			return (List<Node>) parent.children()
+				.stream()
+				.filter((child) -> isNodeWithName(child, name))
+				.collect(Collectors.toList());
+
 		}
 
 		private boolean isNodeWithName(Object candidate, String name) {
-			if (candidate instanceof Node node) {
-				if ((node.name() instanceof QName qname) && name.equals(qname.getLocalPart())) {
+			if (candidate instanceof Node) {
+				Node node = (Node) candidate;
+				if ((node.name() instanceof QName) && name.equals(((QName) node.name()).getLocalPart())) {
 					return true;
 				}
 				if (name.equals(node.name())) {
